--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: halladam2014/minimal
-title: Home | Adam Hall
+title: Adam Hall, M.Sc.
 logo: /assets/img/logo.png
-description: Adam hall, PhD Student
+description: Adam Hall, PhD Student
 show_downloads: true
 google_analytics:
 
