--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: halladam2014/minimal
 title: Adam Hall, M.Sc.
 logo: /assets/img/logo.png
-description: Adam Hall, PhD Student
-show_downloads: true
+description: He/Him <br> Engineer <br> PhD Student
+show_downloads: false
 google_analytics:
 
