--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: halladam2014/minimal
 title: Adam Hall, M.Sc.
-logo: /assets/img/logo.png
+logo: /images/Adam_Hall_Headshot_Oct_2023_2.png
 description: He/Him <br> Engineer | PhD Student
 show_downloads: false
 google_analytics:
