--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: halladam2014/minimal
 title: Adam Hall, M.Sc.
-logo: /images/Adam_Hall_Headshot_Oct_2023_2.png
+logo: /images/Adam_Hall_Headshot_Oct_2023_2_small.jpg
 description: He/Him<br>Engineer<br>PhD Student
 show_downloads: false
 google_analytics:
